# esperoj

./: .coderabbit.yaml  .coverage  .cruft.json  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  Dockerfile  README.md  autopilot.json  docker-compose.yml  pyproject.toml  requirements.txt  statichost.yml  sweep.yaml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  test.yml
archive/: airtable.py
scripts/: build.sh
src/esperoj/: __init__.py  __main__.py  airtable.py  cli.py  database.py  esperoj.py  exceptions.py  logger.py  s3.py  storage.py  storj.py  utils.py
src/esperoj/database/: __init__.py  airtable.py  database.py  memory.py  seatable.py
src/esperoj/scripts/: __init__.py  archive.py  backup.py  daily_add_metadata.py  daily_archive.py  daily_verify.py  export_database.py  info.py  ingest.py  migrate.py  save_page.py  utils.py  verify.py
src/esperoj/storage/: __init__.py  local.py  s3.py  storage.py
tests/: __init__.py  conftest.py  esperoj.toml  test_airtable.py  test_cli.py  test_database.py  test_esperoj.py  test_import.py  test_local_storage.py  test_s3.py  test_s3_storage.py  test_utils.py
typings/seatable_api/: __init__.pyi  column.pyi  constants.pyi  context.pyi  convert_airtable.pyi  date_utils.pyi  exception.pyi  main.pyi  message.pyi  query.pyi  socket_io.pyi  utils.pyi
