[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "esperoj"
version = "0.6.1"
description = "Esperoj package with cli."
authors = ["Esperoj <esperoj@esperoj.eu.org>"]
readme = "README.md"
repository = "https://github.com/esperoj/esperoj"

[tool.poetry.scripts]
esperoj = "esperoj.cli:app"

[tool.poetry.dependencies]
python = ">=3.11"
typer = { extras = ["all"], version = ">=0.9.0" }
boto3 = ">=1.34.2"
pyairtable = ">=2.2.1"
requests = ">=2.31.0"
pyexiftool = ">=0.5.6"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
poethepoet = ">=0.20.0"
pytest = ">=7.3.1"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.12.0"
pytest-xdist = ">=3.2.1"
moto = ">=5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pdoc = ">=13.1.1"
ruff = ">=0.1.3"
pyright = ">=1.1.341"
pre-commit = ">=3.3.1"

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
command_line = "--module pytest"
data_file = ".coverage"
parallel = true
source = ["src"]

[tool.coverage.xml]
output = "reports/coverage.xml"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "tests"
]

[tool.pytest.ini_options]
addopts = "--verbose -n 4 --cov-report xml --cov-report term --cov=src/esperoj --color=yes --exitfirst --failed-first"
testpaths = ["tests"]
xfail_strict = true
markers = [
  "only: run this only"
]

[tool.ruff]
fix = true
ignore-init-module-imports = true
line-length = 100
select = ["A", "ASYNC", "B", "C4", "C90", "D", "DTZ", "E", "F", "FLY", "I", "N", "NPY", "PERF", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "RET", "RUF", "RSE", "SIM", "TID", "UP", "W", "YTT"]
ignore = ["PLR0913", "PLR2004", "E501", "PGH001", "PGH002", "PGH003", "RET504", "S101"]
unfixable = ["F401", "F841"]
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.pydocstyle]
convention = "google"

[tool.poe.tasks]

  [tool.poe.tasks.docs]
  help = "Generate this package's docs"
  cmd = """
    pdoc
      --docformat $docformat
      --output-directory $outputdirectory
      esperoj
    """

    [[tool.poe.tasks.docs.args]]
    help = "The docstring style (default: numpy)"
    name = "docformat"
    options = ["--docformat"]
    default = "google"

    [[tool.poe.tasks.docs.args]]
    help = "The output directory (default: docs)"
    name = "outputdirectory"
    options = ["--output-directory"]
    default = "docs"

  [tool.poe.tasks.lint]
  help = "Lint this package"

    [[tool.poe.tasks.lint.sequence]]
    cmd = """
      pre-commit run
        --all-files
        --color always
      """

  [tool.poe.tasks.test]
  help = "Test this package"

    [[tool.poe.tasks.test.sequence]]
    cmd = "pytest"
